--- a/package.json
+++ b/package.json
@@ -12,24 +12,67 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.2.0",
-    "@nuxtjs/axios": "^5.13.6",
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/interaction": "^5.6.0",
+    "@fullcalendar/timegrid": "^5.6.0",
+    "@fullcalendar/vue": "^5.6.0",
+    "@nuxt/typescript-runtime": "^2.0.0",
+    "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/pwa": "^3.3.5",
-    "core-js": "^3.19.3",
-    "express": "^4.18.1",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0",
+    "@popperjs/core": "^2.9.1",
+    "@toast-ui/vue-calendar": "^1.1.1",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/mongoose": "^5.10.4",
+    "@types/vue-router": "^2.0.0",
+    "bcrypt": "^5.0.1",
+    "chart.js": "^2.9.4",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-validator": "^6.10.0",
+    "fetch": "^1.1.0",
+    "googleapis": "^39.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.12.1",
+    "multer": "^1.4.2",
+    "node-cron": "^3.0.0",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.5.0",
+    "nuxt": "^2.14.0",
+    "pdfvuer": "^1.7.5",
+    "random-token": "^0.0.8",
+    "sharp": "^0.27.2",
+    "tui-calendar": "^1.13.0",
+    "v-calendar": "^2.3.0",
+    "vue-cal": "^3.10.1",
+    "vue-event-calendar": "^1.5.2",
+    "vue-full-calendar": "^2.8.1-0",
+    "vue-fullcalendar": "^1.0.9",
+    "vue-lunar-full-calendar": "^1.3.2",
+    "vue-pdf": "^4.2.0",
+    "vue-simple-calendar": "^5.0.0",
     "ytdl-core": "^4.11.2"
   },
   "devDependencies": {
-    "@nuxt/types": "^2.15.8",
+    "@nuxt/types": "^2.13.2",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "postcss": "^8.4.4",
-    "prettier": "^2.5.1"
+    "@nuxt/typescript-runtime": "2.1.0",
+    "@nuxtjs/tailwindcss": "^2.1.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/express": "^4.17.0",
+    "@types/multer": "^1.4.4",
+    "@types/node-cron": "^2.0.3",
+    "@types/node-fetch": "^2.5.10",
+    "@types/nodemailer": "^6.4.1",
+    "@types/sharp": "^0.27.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
+    "prismjs": "^1.22.0",
+    "sass-loader": "^10.1.0",
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.0.5"
   }
 }
