--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nuxt/types": "^2.13.2",
     "@nuxt/typescript-build": "^2.1.0",
     "@nuxt/typescript-runtime": "2.1.0",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/tailwindcss": "^2.1.0",
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
