--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fullcalendar/vue": "^5.6.0",
     "@nuxt/typescript-runtime": "^2.0.0",
     "@nuxtjs/axios": "^5.12.0",
+    "@nuxtjs/google-adsense": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@popperjs/core": "^2.9.1",
     "@toast-ui/vue-calendar": "^1.1.1",
