--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/google-adsense": "^2.0.0",
     "@nuxtjs/pwa": "^3.3.5",
+    "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/sitemap": "^2.4.0",
     "@popperjs/core": "^2.9.1",
     "@toast-ui/vue-calendar": "^1.1.1",
     "@types/jsonwebtoken": "^8.5.1",
