--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
     "fetch": "^1.1.0",
+    "fluent-ffmpeg": "^2.1.2",
     "googleapis": "^39.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
@@ -66,6 +67,7 @@
     "@types/bcrypt": "^3.0.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.0",
+    "@types/fluent-ffmpeg": "^2.1.20",
     "@types/multer": "^1.4.4",
     "@types/node-cron": "^2.0.3",
     "@types/node-fetch": "^2.5.10",
@@ -77,6 +79,7 @@
     "prismjs": "^1.22.0",
     "sass-loader": "^10.1.0",
     "ts-loader": "^8.0.11",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "video.js": "^7.20.3"
   }
 }
