--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "pdfvuer": "^1.7.5",
     "random-token": "^0.0.8",
     "sharp": "^0.27.2",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2",
     "tui-calendar": "^1.13.0",
     "v-calendar": "^2.3.0",
     "vue-cal": "^3.10.1",
