--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "multer": "^1.4.2",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.1",
+    "node-lame": "^1.3.2",
     "nodemailer": "^6.5.0",
     "nuxt": "^2.14.0",
     "pdfvuer": "^1.7.5",
